syntax = "proto3";
package chat;


// Framework related messages


message ConnectRequest {
    uint64 client_id = 1;
}


message PacketMetadata {
    uint64 client_id = 1;
    uint64 sequence_num = 2;
}

// Application messages

message WriteRequest {
    PacketMetadata meta = 1;
    string contents = 2;
}

message LogRequest {
    PacketMetadata meta = 1;
}


message ChatUpdated {
    PacketMetadata meta = 1;
    uint64 index = 2;
    string contents = 3;
}

message LogResponse {
    PacketMetadata meta = 1;
    repeated string contents = 2;
}



service Chat {
    // A way of implementing broadcasts, subscribe to chat messages received by the server
    rpc Subscribe (ConnectRequest) returns (stream ChatUpdated);
    
    rpc Write (WriteRequest) returns (ChatUpdated);
    rpc Read (LogRequest) returns (LogResponse);
}